--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello World!</title>
-    <link rel="stylesheet" href="index.css" />
-  </head>
-  <body>
-    <h1>💖 Hello World!</h1>
-    <p>Welcome to your Electron application.</p>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <title>Hello World!</title>
+  <link rel="stylesheet" href="index.css" />
+</head>
+
+<body>
+  <div class="title-bar">
+    <div class="win-title prevent-select dragable">가계부</div>
+    <div class="control prevent-select">
+      <button class="title-bar-btn" id="win-minimize">
+        <img src="./assets/minimize.svg" height="18px" />
+      </button>
+      <button class="title-bar-btn" id="win-maximize">
+        <img src="./assets/maximize.svg" height="18px" />
+      </button>
+      <button class="title-bar-btn" id="win-close">
+        <img id="close-svg" src="./assets/close.svg" height="18px" />
+      </button>
+    </div>
+  </div>
+  <script src="./function.js" ></script>
+</body>
+
 </html>
