--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <div class="title-bar">
+  <header class="title-bar">
     <div class="win-title prevent-select dragable">가계부</div>
     <div class="control prevent-select">
       <button class="title-bar-btn" id="win-minimize">
@@ -21,8 +21,99 @@
         <img id="close-svg" src="./assets/close.svg" height="18px" />
       </button>
     </div>
+  </header>
+  <div class="body">
+    <section class="list-view">
+      <div class="week-block">
+        <div class="week-title" id="1st">1주차 <div class="add-item">+</div>
+        </div>
+        <div class="item">
+          <div class="date">2022.06.29</div>
+          <div class="content">
+            <div class="place">도미노 피자</div>
+            <div class="price">\20,000</div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="date">2022.06.29</div>
+          <div class="content">
+            <div class="place">도미노 피자</div>
+            <div class="price">\20,000</div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="date">2022.06.29</div>
+          <div class="content">
+            <div class="place">도미노 피자</div>
+            <div class="price">\20,000</div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="date">2022.06.29</div>
+          <div class="content">
+            <div class="place">도미노 피자</div>
+            <div class="price">\20,000</div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="date">2022.06.29</div>
+          <div class="content">
+            <div class="place">도미노 피자</div>
+            <div class="price">\20,000</div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="date">2022.06.29</div>
+          <div class="content">
+            <div class="place">도미노 피자</div>
+            <div class="price">\20,000</div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="date">2022.06.29</div>
+          <div class="content">
+            <div class="place">도미노 피자</div>
+            <div class="price">\20,000</div>
+          </div>
+        </div>
+        <div class="item">
+          <div class="date">2022.06.29</div>
+          <div class="content">
+            <div class="place">도미노 피자</div>
+            <div class="price">\20,000</div>
+          </div>
+        </div>
+      </div>
+      <div class="week-block">
+        <div class="week-title" id="2nd">2주차 <div class="add-item">+</div></div>
+      </div>
+      <div class="week-block">
+        <div class="week-title" id="3rd">3주차 <div class="add-item">+</div></div>
+      </div>
+      <div class="week-block">
+        <div class="week-title" id="4th">4주차 <div class="add-item">+</div></div>
+      </div>
+      <div class="week-block">
+        <div class="week-title" id="5th">5주차 <div class="add-item">+</div></div>
+      </div>
+    </section>
+    <nav>
+      <div>
+        <div class="month">7월</div>
+        <div class="weeks">
+          <a href="#1st">> 1주차</a>
+          <a href="#2nd">> 2주차</a>
+          <a href="#3rd">> 3주차</a>
+          <a href="#4th">> 4주차</a>
+          <a href="#5th">> 5주차</a>
+        </div>
+      </div>
+      <div class="sum">
+        \1,000
+      </div>
+    </nav>
   </div>
-  <script src="./function.js" ></script>
+  <script src="./function.js"></script>
 </body>
 
 </html>
