--- a/src/index.html
+++ b/src/index.html
@@ -22,79 +22,38 @@
       </button>
     </div>
   </header>
+  <div class="add-item-modal-bg">
+    <div class="add-item-modal">
+      <div class="modal-title">등록하기</div>
+      <div class="select-week"></div>
+    </div>
+  </div>
   <div class="body">
     <section class="list-view">
       <div class="week-block">
-        <div class="week-title" id="1st">1주차 <div class="add-item">+</div>
-        </div>
-        <div class="item">
+        <div class="week-title" id="1st">1주차</div>
+        <!-- <div class="item">
           <div class="date">2022.06.29</div>
           <div class="content">
             <div class="place">도미노 피자</div>
             <div class="price">\20,000</div>
           </div>
-        </div>
-        <div class="item">
-          <div class="date">2022.06.29</div>
-          <div class="content">
-            <div class="place">도미노 피자</div>
-            <div class="price">\20,000</div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="date">2022.06.29</div>
-          <div class="content">
-            <div class="place">도미노 피자</div>
-            <div class="price">\20,000</div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="date">2022.06.29</div>
-          <div class="content">
-            <div class="place">도미노 피자</div>
-            <div class="price">\20,000</div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="date">2022.06.29</div>
-          <div class="content">
-            <div class="place">도미노 피자</div>
-            <div class="price">\20,000</div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="date">2022.06.29</div>
-          <div class="content">
-            <div class="place">도미노 피자</div>
-            <div class="price">\20,000</div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="date">2022.06.29</div>
-          <div class="content">
-            <div class="place">도미노 피자</div>
-            <div class="price">\20,000</div>
-          </div>
-        </div>
-        <div class="item">
-          <div class="date">2022.06.29</div>
-          <div class="content">
-            <div class="place">도미노 피자</div>
-            <div class="price">\20,000</div>
-          </div>
-        </div>
+        </div> -->
       </div>
       <div class="week-block">
-        <div class="week-title" id="2nd">2주차 <div class="add-item">+</div></div>
+        <div class="week-title" id="2nd">2주차</div>
       </div>
       <div class="week-block">
-        <div class="week-title" id="3rd">3주차 <div class="add-item">+</div></div>
+        <div class="week-title" id="3rd">3주차</div>
       </div>
       <div class="week-block">
-        <div class="week-title" id="4th">4주차 <div class="add-item">+</div></div>
+        <div class="week-title" id="4th">4주차</div>
       </div>
       <div class="week-block">
-        <div class="week-title" id="5th">5주차 <div class="add-item">+</div></div>
+        <div class="week-title" id="5th">5주차</div>
+      </div>
+      <div class="add-item-btn">
+        <img src="./assets/add.svg" height="40px">
       </div>
     </section>
     <nav>
@@ -109,7 +68,7 @@
         </div>
       </div>
       <div class="sum">
-        \1,000
+        \0
       </div>
     </nav>
   </div>
