--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-  <header class="title-bar">
-    <div class="win-title prevent-select dragable">가계부</div>
+  <header class="title-bar draggable">
+    <div class="win-title prevent-select">가계부</div>
     <div class="control prevent-select">
       <button class="title-bar-btn" id="win-minimize">
         <img src="./assets/minimize.svg" height="18px" />
@@ -25,7 +25,18 @@
   <div class="add-item-modal-bg">
     <div class="add-item-modal">
       <div class="modal-title">등록하기</div>
-      <div class="select-week"></div>
+      <div class="wrapper">
+        <select class="select-week">
+          <option value="1">1주차</option>
+          <option value="2">2주차</option>
+          <option value="3">3주차</option>
+          <option value="4">4주차</option>
+          <option value="5">5주차</option>
+        </select>
+        <input type="text" class="input-content" placeholder="어디서">
+        <input type="text" class="input-content" placeholder="얼마나">
+      </div>
+      <button class="add-item-submit">등록</button>
     </div>
   </div>
   <div class="body">
